tests/ui/borrowck/issue-81365-5.stderr
error[E0506]: cannot assign to `self.container_field` because it is borrowed
  --> $DIR/issue-81365-5.rs:28:9
   |
LL |         let first = self.get();
   |                     ---- `self.container_field` is borrowed here
LL |         self.container_field = true;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^ `self.container_field` is assigned to here but it was already borrowed
LL |         first;
   |         ----- borrow later used here
   |
   = note: borrow occurs due to deref coercion to `DerefTarget`
note: deref defined here
  --> $DIR/issue-81365-5.rs:19:5
   |
LL |     type Target = DerefTarget;
   |     ^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0506`.
